# skellybot

./: .gitignore  README.md  RUN_ME.py  pyproject.toml  sample.env
skellybot/: __init__.py  __main__.py
skellybot/bot/: bot.py  freemocap_vectorstore_agent.py
skellybot/bot/documentation_downloader/: documentation_downloader.py
skellybot/gui/: gui_main.py  qt_main.py
skellybot/gui/chat_window/: chat_thread_worker.py  chat_widget.py
skellybot/gui/main_window/: main_window.py
skellybot/gui/widgets/: main_window.py  skelly_bot_widget.py
skellybot/system/: default_paths.py  get_package_info.py
skellybot/tests/: test_test.py
